# limit-up

./: Cargo.toml  README.md  build.rs
src/: args.rs  command.rs  main.rs  ui.rs
src/core/: helper.rs  mod.rs
src/core/installer/: cargo.rs  mod.rs  pkgmanager.rs  rustup.rs
src/core/installer/freebsd_impl/: mod.rs  pkgmanager.rs
src/core/installer/linux_impl/: mod.rs
src/core/installer/windows_impl/: mod.rs
src/core/pkgmanager/: mod.rs
src/ui/: install.rs  mod.rs  welcome.rs
src/ui/frontend/: mod.rs
src/ui/install/: install.rs  mod.rs  welcome.rs
src/ui/setup/: install.rs  mod.rs  welcome.rs
src/ui/widgets/: mod.rs  step_tabs.rs  steptabs.rs
tr/: zh-CN.json
