[package]
name = "limit-up"
version = "0.1.0"
edition = "2021"
authors = ["Limit team"]
description = "A CLI tool that helps you to setup limit-server."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mod_use = "0.2.1"
clap = { version = "4.0", features = ["derive"] }
nix = "0.26"
os_info = "3.5.1"
cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"] }
