[package]
name = "limit-up"
version = "0.1.0"
edition = "2021"
authors = ["Limit team"]
description = "A CLI tool that helps you to setup limit-server."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mod_use = "0.2.1"
clap = { version = "4.0", features = ["derive"] }
nix = "0.26"
tokio = { version = "1.24", features = ["process", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
once_cell = "1.16"
r18 = "0.4.0"

[build-dependencies]
build-target = "0.4"
